# department_test_task

./: .env  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml  requirements.txt
migrations/: env.py
migrations/versions/: 3def17a53dca_initial_schema.py
src/: db.py  dependencies.py  main.py  models.py  routers.py
tests/: conftest.py
tests/e2e/: conftest.py  test_departments.py  test_employees.py
