[tool.fastapi]
entrypoint = "src.main:app"

[project]
name = "test-task"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "alembic>=1.18.4",
    "fastapi[standard]>=0.136.1",
    "psycopg2-binary>=2.9.12",
    "pytest>=9.0.3",
    "sqlmodel>=0.0.38",
]
